<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margen_toolbar"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imgAlumno"
        android:layout_width="@dimen/dimen_foto"
        android:layout_height="@dimen/dimen_foto"
        android:contentDescription="@string/descripcion_foto_del_alumno"
        android:src="@drawable/default_alumno_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_nombre_alumno"
        android:layout_marginTop="@dimen/margin_top_datos_alumnos"
        android:layout_marginLeft="@dimen/margin_horizontal_datos_alumnos"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/icNombreAlumno"
        app:layout_constraintTop_toBottomOf="@+id/imgAlumno"
        android:layout_marginStart="@dimen/margin_horizontal_datos_alumnos" />
    <EditText
        android:id="@+id/txtNombreAlumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre_del_alumno"
        app:layout_constraintTop_toTopOf="@+id/icNombreAlumno"
        app:layout_constraintBottom_toBottomOf="@+id/icNombreAlumno"
        app:layout_constraintLeft_toRightOf="@+id/icNombreAlumno">
        <requestFocus />
    </EditText>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_telefono"
        android:layout_marginTop="@dimen/margin_top_datos_alumnos"
        android:layout_marginLeft="@dimen/margin_horizontal_datos_alumnos"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/icTelefono"
        app:layout_constraintTop_toBottomOf="@+id/icNombreAlumno"
        android:layout_marginStart="@dimen/margin_horizontal_datos_alumnos" />
    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone"
        app:layout_constraintTop_toTopOf="@+id/icTelefono"
        app:layout_constraintBottom_toBottomOf="@+id/icTelefono"
        app:layout_constraintLeft_toRightOf="@+id/icTelefono" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_email"
        android:layout_marginTop="@dimen/margin_top_datos_alumnos"
        android:layout_marginLeft="@dimen/margin_horizontal_datos_alumnos"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/icEmail"
        app:layout_constraintTop_toBottomOf="@+id/icTelefono"
        android:layout_marginStart="@dimen/margin_horizontal_datos_alumnos" />
    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="@+id/icEmail"
        app:layout_constraintBottom_toBottomOf="@+id/icEmail"
        app:layout_constraintLeft_toRightOf="@+id/icEmail" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_empresa"
        android:layout_marginTop="@dimen/margin_top_datos_alumnos"
        android:layout_marginLeft="@dimen/margin_horizontal_datos_alumnos"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/icEmpresa"
        app:layout_constraintTop_toBottomOf="@+id/icEmail"
        android:layout_marginStart="@dimen/margin_horizontal_datos_alumnos" />
    <EditText
        android:id="@+id/txtNombreEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre_de_la_empresa"
        app:layout_constraintTop_toTopOf="@+id/icEmpresa"
        app:layout_constraintBottom_toBottomOf="@+id/icEmpresa"
        app:layout_constraintLeft_toRightOf="@+id/icEmpresa" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_tutor"
        android:layout_marginTop="@dimen/margin_top_datos_alumnos"
        android:layout_marginLeft="@dimen/margin_horizontal_datos_alumnos"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/icTutor"
        app:layout_constraintTop_toBottomOf="@+id/icEmpresa"
        android:layout_marginStart="@dimen/margin_horizontal_datos_alumnos" />
    <EditText
        android:id="@+id/txtNombreTutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre_del_tutor"
        app:layout_constraintTop_toTopOf="@+id/icTutor"
        app:layout_constraintBottom_toBottomOf="@+id/icTutor"
        app:layout_constraintLeft_toRightOf="@+id/icTutor" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_horario"
        android:layout_marginTop="@dimen/margin_top_datos_alumnos"
        android:layout_marginLeft="@dimen/margin_horizontal_datos_alumnos"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/icHorario"
        app:layout_constraintTop_toBottomOf="@+id/icTutor"
        android:layout_marginStart="@dimen/margin_horizontal_datos_alumnos" />
    <EditText
        android:id="@+id/txtHorario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/horario_prácticas"
        android:inputType="time"
        app:layout_constraintTop_toTopOf="@+id/icHorario"
        app:layout_constraintBottom_toBottomOf="@+id/icHorario"
        app:layout_constraintLeft_toRightOf="@+id/icHorario" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_direccion"
        android:layout_marginTop="@dimen/margin_top_datos_alumnos"
        android:layout_marginLeft="@dimen/margin_horizontal_datos_alumnos"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/icDireccion"
        app:layout_constraintTop_toBottomOf="@+id/icHorario"
        android:layout_marginStart="@dimen/margin_horizontal_datos_alumnos" />
    <EditText
        android:id="@+id/txtDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/direccion_empresa"
        app:layout_constraintTop_toTopOf="@+id/icDireccion"
        app:layout_constraintBottom_toBottomOf="@+id/icDireccion"
        app:layout_constraintLeft_toRightOf="@+id/icDireccion" />

</android.support.constraint.ConstraintLayout>